product/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: product
spec:
  replicas: 5
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
        project: ecommerce
    spec:
      containers:
      - name: product
        image: color275/ecommerce-linux:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
