product/communicate.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: product
spec:
  type: ExternalName
  externalName: order.order.svc.cluster.local
  ports:
  - port: 80
