product/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/api/product/1"
spec:
  type: NodePort
  selector:
    app: product
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
